# ern-port

./: .gitignore  README.md  pyproject.toml  run.bat  run.sh
ERNSC1-1/: Form1.frm  Form14.frm
ERNSC1-3/: Disctract.frm  Form24.frm
ERNSC1-4/: Form2.frm
ERNSC1-5/: Form17.frm  Y2K.frx  netbus.frx
ERNSC1-6/: Form17.frm
ERNSC2-2/: Form17.frm
ERNSC2-3/: Logo.frx
ERNSC2-4/: Form17.frm  netbus.frx
ERNSC2-5/: Form17.frm  anarquia.frx
data/ERNSC1-1/: behavior.json  manifest.json
data/ERNSC1-1/text/: Acerca_Label2.txt  Aclaración_Label2.txt  Form10_Label3.txt  Form10_Label5.txt  Form10_Label6.txt  Form11_Label3.txt  Form11_Label4.txt  Form11_Label5.txt  Form11_Label6.txt  Form12_Label3.txt  Form12_Label5.txt  Form12_Label6.txt  Form13_Label2.txt  Form13_Label3.txt  Form13_Label4.txt  Form14_Label2.txt  Form14_Label3.txt  Form14_Label4.txt  Form15_Label2.txt  Form15_Label3.txt  Form15_Label4.txt  Form15_Label5.txt  Form15_Label6.txt  Form15_Label7.txt  Form17_Label7.txt  Form17_Label8.txt  Form18_Label2.txt  Form18_Label3.txt  Form18_Label4.txt  Form18_Label5.txt  Form19_Label2.txt  Form19_Label3.txt  Form19_Label4.txt  Form19_Label5.txt  Form19_Label6.txt  Form1_Label2.txt  Form3_Label2.txt  (+23 more)
data/ERNSC1-2/: behavior.json  manifest.json
data/ERNSC1-3/: behavior.json  manifest.json
data/ERNSC1-4/: behavior.json  manifest.json
data/ERNSC1-5/: behavior.json  manifest.json
data/ERNSC1-6/: behavior.json  manifest.json
data/ERNSC2-1/: behavior.json  manifest.json
data/ERNSC2-2/: behavior.json  manifest.json
data/ERNSC2-3/: behavior.json  manifest.json
data/ERNSC2-4/: behavior.json  manifest.json
data/ERNSC2-5/: behavior.json  manifest.json
docs/: FEATURES.md  PORTING.md
ernreader/: __init__.py  __main__.py  actions.py  engine.py  launcher.py  search.py  state.py  theme.py
tests/: test_engine.py  test_features.py  test_interactive.py
tools/: convert_emf.py  extract_exe.py  extract_vb.py  validate.py
(+290 files in other folders)
