[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ernreader"
version = "0.2.0"
description = "Lector Win95 de El Radiaktivo Newz: port a Python 3 / Tkinter de la e-zine hacker mexicana (1998-2000)"
readme = "README.md"
requires-python = ">=3.10"
# NOTA: no hay archivo de licencia en el material original ni instrucción
# explícita del autor sobre la licencia de este port. Se deja MIT como
# valor por defecto habitual para este tipo de proyecto: BadBit/El
# Radiaktivo Newz Team debe confirmarla (o cambiarla) antes de publicar.
license = { text = "MIT" }
authors = [
    { name = "El Radiaktivo Newz Team" },
]
keywords = ["ezine", "retro", "visual-basic", "tkinter", "preservacion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Topic :: Artistic Software",
]
dependencies = [
    "pillow",
]

[project.scripts]
ernreader = "ernreader.__main__:main"

[tool.setuptools]
packages = ["ernreader"]
