[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ernreader"
version = "0.2.0"
description = "Lector Win95 de El Radiaktivo Newz: port a Python 3 / Tkinter de la e-zine hacker mexicana (1998-2000)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-only" }
authors = [
    { name = "El Radiaktivo Newz Team" },
]
keywords = ["ezine", "retro", "visual-basic", "tkinter", "preservacion"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Topic :: Artistic Software",
]
dependencies = [
    "pillow",
]

[project.scripts]
ernreader = "ernreader.__main__:main"

[tool.setuptools]
packages = ["ernreader"]
